# socketio-asyncapi

./: .asyncapi-tool  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: python-package.yml
examples/: demonstrate_socketio.py  demonstrate_socketio.yml
examples/asyncapi_renderer/: index.html
socketio_asyncapi/: application.py
socketio_asyncapi/asyncapi/: docs.py
src/socketio_asyncapi/: application.py
src/socketio_asyncapi/asyncapi/: docs.py  types.py
src/socketio_asyncapi/asyncapi/models/: schema.py
tests/: appdummy.py  conftest.py  download_app.py  pytest.ini  test_docs.py  test_exceptions.py  test_simple_aiohttp.py  test_utils.py  test_validation.py  test_validation_old.py
